# talos

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt  exceptions.cpp  exceptions.h  expected.h  main.cpp  return_code.h  source_location.h  talos.cpp  talos.h  token.h
src/frontend/: ast.cpp  ast.h  ast_printer.cpp  ast_printer.h  lexer.cpp  lexer.h  parser.cpp  parser.h
test/: CMakeLists.txt  lexer.cpp  talos.cpp
test_sources/: main.talos
